--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Babel==2.15.0
 cairocffi==1.7.0
 CairoSVG==2.7.1
 certifi==2024.2.2
-cffi==1.16.0
+cffi==1.17.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
@@ -30,7 +30,7 @@ numpy==1.26.4
 packaging==24.1
 paginate==0.5.6
 pathspec==0.12.1
-pillow==10.3.0
+pillow==11.3.0
 platformdirs==4.2.2
 proglog==0.1.10
 pycparser==2.22
@@ -55,3 +55,4 @@ watchdog==4.0.1
 waybackpack==0.6.2
 webencodings==0.5.1
 wget==3.2
+mkdocs-glightbox==0.5.1
